Fix stuttering on mobile

--- a/src/components/molecules/stepper.module.scss
+++ b/src/components/molecules/stepper.module.scss
@@ -2,11 +2,14 @@
     0% {
         transform: translateY(200px);
     }
+
     100% {
         transform: translate(0);
     }
 }
 
-.slideIn {
-    animation: slideIn 0.4s ease-out;
+@media (min-width: 1024px) {
+    .slideIn {
+        animation: slideIn 0.4s ease-out;
+    }
 }
